# writing-feature-extractor

./: .~lock.feature_results.csv#  README.md  feature_config.yaml  feature_results.csv  main.py  pyproject.toml  pytest.ini
tests/: test_cli.py  test_main.py
tests/core/: test_feature_config.py  test_feature_extraction.py  test_model_factory.py
tests/features/: test_generic_feature.py  test_writing_feature.py  test_writing_feature_factory.py
tests/utils/: test_generate_graph_from_csv.py  test_save_results_to_csv.py  test_text_metrics.py  test_text_processing.py
writing_feature_extractor/: Death_Drive_73.txt  available_models.py  cli.py  feature_config.py  feature_extraction.py  feature_ideas.py  figure_plotter.py  generate_graph_from_csv.py  graph_plot_service.py  llm_feature_extractor.py  logger_config.py  model_factory.py  save_results_to_csv.py  structures.py  test_llm_feature_extractor.py  writing_feature.py
writing_feature_extractor/core/: available_models.py  custom_exceptions.py  feature_config.py  feature_extraction.py  figure_plotter.py  model_factory.py
writing_feature_extractor/features/: available_writing_features.py  descriptive_detail_level.py  emotional_intensity_feature.py  feature_config_data.py  generic_feature.py  graph_mode.py  humor_level.py  level_of_suspense.py  mood_feature.py  mystery_level_feature.py  pace_feature.py  result_collection_mode.py  romance_level.py  writing_feature.py  writing_feature_factory.py  writing_feature_graph_mode.py
writing_feature_extractor/prompt_templates/: advanced_descriptive_level_detail_prompt.py  (+8 more)
(+14 files in other folders)
