[tool.poetry]
name = "writing-feature-extractor"
version = "0.1.0"
description = ""
authors = ["Jason Robison <jrrobison@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.0"
langgraph = "^0.0.54"
langchain-groq = "^0.1.4"
langchain-google-genai = "^1.0.4"
langchain-google-vertexai = "^1.0.4"
langchain-anthropic = "^0.1.13"
textstat = "^0.7.3"
langchain-openai = "^0.1.8"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
langchain-fireworks = "^0.1.3"
mplcursors = "^0.5.3"
langchain-together = "^0.1.3"
python-dotenv = "^1.0.1"
pytest = "^6.2.5"
pytest-mock = "^3.14.0"
typer-slim = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
